test/spec_vectors/simd_align/ok/module_4.wat
(module (memory 1) (func (drop (v128.load align=16 (i32.const 0)))))