test/spec_vectors/simd_align/fail/module_48.wat
(module (memory 1) (func (result v128) (v128.load16x4_s align=16 (i32.const 0))))